add css to top reads

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -28,3 +28,11 @@
 .text-sm {
   font: var(--text-sm);
 }
+
+.line-clamp-3 {
+  display: -webkit-box;
+    line-clamp: 3;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
