--- a/styles/utility.css
+++ b/styles/utility.css
@@ -14,6 +14,10 @@
   gap: 16px;
 }
 
+.gap-32 {
+  gap: 32px;
+}
+
 .text-2xl {
   font: var(--h1);
 }
@@ -31,8 +35,8 @@
 
 .line-clamp-3 {
   display: -webkit-box;
-    line-clamp: 3;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;  
-    overflow: hidden;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
 }
