--- a/styles/utility.css
+++ b/styles/utility.css
@@ -33,10 +33,26 @@
   font: var(--text-sm);
 }
 
+.line-clamp-2 {
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
 .line-clamp-3 {
   display: -webkit-box;
   line-clamp: 3;
   -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
+.line-clamp-4 {
+  display: -webkit-box;
+  line-clamp: 4;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;  
   overflow: hidden;
 }
